dubbo-cluster/src/test/resources/DestinationRuleTest2.yaml
apiVersion: service.dubbo.apache.org/v1alpha1
kind: DestinationRule
metadata: { name: demo-route }
spec:
  host: demo
  subsets:
    - labels: { env-sign: xxx, tag1: hello }
      name: isolation
    - labels: { env-sign: yyy }
      name: testing-trunk
    - labels: { env-sign: zzz }
      name: testing
  trafficPolicy:
    loadBalancer: { simple: ROUND_ROBIN }

---

apiVersion: service.dubbo.apache.org/v1alpha1
kind: VirtualService
metadata: {name: demo-route}
spec:
  dubbo:
    - routedetail:
        - match:
            - sourceLabels: {trafficLabel: xxx}
          name: xxx-project
          route:
            - destination: {host: demo, subset: isolation}
        - match:
            - sourceLabels: {trafficLabel: testing-trunk}
          name: testing-trunk
          route:
            - destination: {host: demo, subset: testing-trunk}
        - name: testing
          route:
            - destination: {host: demo, subset: testing}
      services:
        - {regex: ccc}
  hosts: [demo]
